# TradeDiscrepancyFinder

./: .env.example  .replit  README.md  check-table-structure.cjs  check-tf-forms-structure.js  checkAvailableTables.js  checkAzureData.js  checkAzureFieldStructure.js  checkAzureUCP.js  checkDemoTables.js  checkDocumentTable.cjs  checkDocumentTable.js  checkIncotermsTablesStructure.js  checkLifecycleTables.cjs  checkLifecycleTables.js  checkMessageTypesColumns.js  checkSubDocSchema.js  checkSubDocTypes.js  checkSwiftTables.js  checkTFFieldsColumns.cjs  checkUCPStructure.js  clear-azure-direct.js  clear-azure-tables.js  clear-forms-tables.js  complete-insurance-doc.cjs  complete-multipage-lc.cjs  complete-processing.cjs  complete-processing.js  complete-stuck-file.cjs  complete-vessel-processing.js  countSwiftMessages.js  create-sample-forms.cjs  create-split-forms.cjs  createDiscrepanciesTable.js  createDocumentSetsTable.js  createFormsBaseTables.cjs  createLifecycleTables.js  createSubDocumentTypesTable.js  createUCP600Tables.js  createWorkflowsTable.cjs  (+51 more)
attached_assets/: Agent, Task, and Crew Functional Specifications.md  Comprehensive System Design Document.md  Discrepancy Detection Logic for LC Documents.md  Field Classification for Database Enhancement.md  Frontend App Builder Prompt for UCP Rule Engine.md  I am tired_1750162342860.docx  Implementation Checklist.md  Key Rules for LC Document Discrepancy Detection.md  LC Document Discrepancy Detection System Architecture.md  SWIFT MT7xx Message Database for PostgreSQL (1).md  UCP Rule Engine Design Explanation.md  (+16 more)
(+218 files in other folders)
