[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-documentintelligence>=1.0.2",
    "azure-core>=1.34.0",
    "openai>=1.87.0",
    "pillow>=11.2.1",
    "pymupdf>=1.26.1",
    "pyodbc>=5.2.0",
    "pypdf2>=3.0.1",
]
